Correction Text contrast

--- a/style.css
+++ b/style.css
@@ -655,6 +655,7 @@ h4 {
 }
 
 q {
+    color: #464646;
     font-size: 16px;
 }
 
